--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - backend:/docker-entrypoint-initdb.d
     environment:
-      MYSQL_ROOT_PASSWORD=root
-      MYSQL_ROOT_HOST=%
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_ROOT_HOST=%
     ports:
       - "3306:3306"
