--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3'
 
 services:
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     restart: always
     ports:
       - "5000:5000"
+    volumes:
+      - .:/code
   db:
     image: mysql
     restart: always
