--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3'
 
 services:
   backend:
-    build:
-      context: .
+    build: .
     restart: always
     ports:
       - "5000:5000"
