--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   backend:
-    build: .
+    build:
+      context: ./backend
     restart: always
     ports:
       - "5000:5000"
