--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     image: mysql
     restart: always
     command: --default-authentication-plugin=mysql_native_password
+    mem_limit: 1800000000
     volumes:
       - ./backup:/docker-entrypoint-initdb.d
     environment:
