--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,9 @@ beautifulsoup4==4.6.3
 flask==1.0.2
 pymysql==0.9.3
 pony==0.7.9
+cmake
+face_recognition
+pandas
+matplotlib
+seaborn
+opencv-python
