--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
     ports:
       - "5000:5000"
 
-  recognizer:
-    build:
-      context: ./recognizer
-    restart: always
-    ports:
-      - "5001:5001"
+  #  recognizer:
+  #    build:
+  #      context: ./recognizer
+  #    restart: always
+  #    ports:
+  #      - "5001:5001"
 
   db:
     image: mysql
